# nautilus

./: .cproject  .gitignore  .gitmodules  .project  3  CMakeLists.txt  Makefile  README.md  bug.txt  compile_flags.txt  format_all.sh  install_ubuntu.sh  launch_embed_node.sh  license.txt  lidar_slam.kdev4  lidar_slam.project  lidar_slam.workspace  manifest.xml  map.txt  package.xml  pointcloud_debug.rviz  slam_debug.rviz  visualization.rviz
.codelite/: lidar_slam.session
.kdev4/: lidar_slam.kdev4
Debug/: build_CMakeFiles_3.10.2_CompilerIdCXX_CMakeCXXCompilerId.cpp.o.d  build_CMakeFiles_3.10.2_CompilerIdC_CMakeCCompilerId.c.o.d  build_CMakeFiles_FindOpenMP_OpenMPTryFlag.c.o.d  cmake-build-debug_CMakeFiles_3.15.3_CompilerIdCXX_CMakeCXXCompilerId.cpp.o.d  cmake-build-debug_CMakeFiles_3.15.3_CompilerIdC_CMakeCCompilerId.c.o.d  cmake-build-debug_CMakeFiles_FindOpenMP_OpenMPCheckVersion.c.o.d  cmake-build-debug_CMakeFiles_FindOpenMP_OpenMPCheckVersion.cpp.o.d  cmake-build-debug_CMakeFiles_FindOpenMP_OpenMPTryFlag.c.o.d
config/: airsim_config.lua  cmu_cobot_config.lua  default_config.lua  gdc_2020_config.lua  jackal_2020_34_config.lua  jackal_2020_config.lua  jackal_config.lua  lgrc_bag_config.lua  synth_bag_config.lua  turtlebot_config.lua  ut_automata_config.lua  ut_multirobot_sim_slam_config.lua
msg/: HitlSlamInputMsg.msg  WriteMsg.msg
msg_gen/cpp/include/lidar_slam/: CobotOdometryMsg.h
msg_gen/lisp/: CobotOdometryMsg.lisp  _package.lisp  _package_CobotOdometryMsg.lisp  lidar_slam-msg.asd
src/: .solver.cc.kate-swp  CImg.h  CorrelativeScanMatcher.cc  CorrelativeScanMatcher.h  cimg_debug.h  gui_helpers.cc  gui_helpers.h  icp.cc  icp.h  kdtree.cc  kdtree.h  line_extraction.cc  line_extraction.h  main.cc  math_util.h  normal_computation.cc  normal_computation.h  pointcloud_helpers.cc  pointcloud_helpers.cpp  pointcloud_helpers.h  slam_type_builder.cc  slam_type_builder.cpp  slam_type_builder.h  slam_types.h  slam_utils.h  solver.cc  solver.h  solver_datastructures.h  solver_residuals.h  solver_unittest.cc  solver_visualizer.h  timer.cc
src/input/: feature_extracter.cc  feature_extracter.h  normal_computation.cc  normal_computation.h  pointcloud_helpers.cc  pointcloud_helpers.h  slam_type_builder.cc  slam_type_builder.h
src/lidar_slam/msg/: _CobotOdometryMsg.py  _HitlSlamInputMsg.py  _WriteMsg.py  __init__.py
src/loop_closure/: lc_candidate_filter.cc  lc_candidate_filter.h  lc_matcher.cc  lc_matcher.h
src/nautilus/msg/: _CobotOdometryMsg.py  _HitlSlamInputMsg.py  _WriteMsg.py  __init__.py
src/optimization/: data_structures.h  slam_residuals.h  solver.cc  solver.h
src/util/: gui_helpers.h  kdtree.cc  kdtree.h  math_util.h  slam_types.h  slam_util.h  timer.cc  timer.h
src/visualization/: cimg_debug.h  solver_vis.h  solver_vis_ros.cc  solver_vis_ros.h
test/: CMakeLists.txt  correlative_scan_matching_test.cc  feature_extractor_test.cc  kdtree_test.cc  main.cc  solver_test.cc
